fix: border radius cards, text minicards on 834px - text start, line break in content card

--- a/src/components/layout/Content/CustomContent.module.css
+++ b/src/components/layout/Content/CustomContent.module.css
@@ -10,6 +10,7 @@
     background-color: #FFF;
     max-width: 752px;
     width: 100%;
+    border-radius: 2px;
 }
 
 .card h6 {
@@ -25,15 +26,6 @@
 .cardsActions {
     display: flex;
     gap: 16px;
-}
-
-.miniCard {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-color: #FFF;
-    max-width: 240px;
-    width: 100%;
 }
 
 /* adaptive */
