--- a/src/components/layout/Footer/CustomFooter.module.css
+++ b/src/components/layout/Footer/CustomFooter.module.css
@@ -38,6 +38,7 @@
     background-color: #FFF;
     max-width: 240px;
     width: 100%;
+    border-radius: 2px;
 }
 
 @media (max-width: 700px) {
