--- a/src/components/ui/MiniCard/MiniCard.module.css
+++ b/src/components/ui/MiniCard/MiniCard.module.css
@@ -5,6 +5,7 @@
     background-color: #FFF;
     max-width: 240px;
     width: 100%;
+    border-radius: 2px;
 }
 
 .textMiniCard {
@@ -13,7 +14,6 @@
     width: 100%;
     padding: 12px 24px;
     border-bottom: solid 1px #F0F0F0;
-
 }
 
 .contentButton {
@@ -21,6 +21,12 @@
 }
 
 /* adaptive */
+@media (max-width: 835px) {
+    .textMiniCard {
+        text-align: start;
+    }
+}
+
 @media (max-width: 700px) {
     .miniCard {
         flex-wrap: wrap;
@@ -29,6 +35,7 @@
     }
 
     .textMiniCard {
+        text-align: center;
         max-width: 100%;
     }
 }
